	[NEW] Implements BuildingListPrintInfo and BuildingListNbElmt

<1/11/2019 11:22> by Gunawan
1. building.h
	[UPDATE] change definition of BuildingResetStatus

2. diagrams
	[UPDATE] update program main flow, game flow, setup flow termination
	[UPDATE] added levelup flow and move flow (attack and skill are to be made)

<1/11/2019 21:44> by Ilham
1. buildinglist.c
	[UPDATE] BuildingListNbElmt

2. .gitignore
	[NEW] /.vscode

<12/11/2019 01:21> by Gunawan
1. mesinkar.h mesinkar.c mesinkata.h mesinkata.c mesintoken.h mesintoken.c
	[DEPRECATED] diganti dengan mesinkar.h dan mesinkar.c yang baru

2. mesinkar.h mesinkar.c
	[NEW] Memperbarui definisi Mesin Karakter untuk menyesuaikan dengan pembacaan file konfigurasi

3. gamemap.h
	[UPDATE] Mengubah deklarasi method GameMapCreate

4. fileloader.h fileloader.c
	[NEW] Memulai pembuatan modul untuk membaca file konfigurasi, akan dilanjutkan setelah ADT Graph dibuat

<13/11/2019 > by Gunawan
1. graph.h graph.c
	[NEW] Definisi dan Implementasi ADT Graph, telah dilengkapi dengan method-method dasar yang sekiranya diperlukan

2. graph_driver.c
	[NEW] Driver untuk mengetes graph.c, semua bagian sudah diperiksa dan berjalan dengan baik

3. buildingrelationgraph.h buildingrelationgraph.c
	[NEW] Definisi dan Implementasi ADT BuildingRelationGraph. ADT didasari pada ADT Graph yang sudah dibuat. Telah dilengkapi dengan method-method dasar yang sekiranya diperlukan

4. buildingrelationshipgraph_driver.c
	[NEW] Driver untuk mengetes buildingrelationgraph.c, semua bagian sudah diperiksa dan berjalan dengan baik

5. gamemap.h
	[UPDATE] Menambahkan atribut BuildingRelationGraph pada definisi tipe GameMap
	[UPDATE] Penggantian penulisan currentPlayer menjadi CurrentPlayer
	[UPDATE] Penggantian definisi GameMapCreate menjadi bertambah parameter BuildingRelationGraph

6. fileloader.c fileloader.h
	[UPDATE] Merubah definisi fungsi yang mengandung "relationship" menjadi "relation" saja
	[UPDATE] Implementasi LoadBuildingRelation()