@@ -240,3 +240,7 @@ See naming convention for details
 6. fileloader.c fileloader.h
 	[UPDATE] Merubah definisi fungsi yang mengandung "relationship" menjadi "relation" saja
 	[UPDATE] Implementasi LoadBuildingRelation()
+
+<14/11/2019 17:45> by Ilham
+1. buildingrelationgraph.c, graph.c mesinkar.c
+	[UPDATE] styled
